[package]
name = "retiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vector2math = "0.14.0"
convert-base = "1.1.2"
serde_json = "1.0.61"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.5.0"

[lib]
name = "retiles"
path = "src/lib.rs"

[[bin]]
name = "retiles"
path = "src/main.rs"
